--- a/main.tex
+++ b/main.tex
@@ -207,6 +207,7 @@
 \DeclareMathOperator{\Fix}{Fix}
 \DeclareMathOperator{\Inn}{Inn}
 \DeclareMathOperator{\Aut}{Aut}
+\DeclareMathOperator{\Gal}{Gal}
 \DeclareMathOperator{\Isom}{Isom}
 \DeclareMathOperator{\Tor}{Tor}
 \DeclareMathOperator{\Exp}{Exp}
