--- a/fields/week3.tex
+++ b/fields/week3.tex
@@ -317,7 +317,7 @@ In below we would use the Zorn's lemma heavily.
     $m_{\beta, M} \mid m_{\beta, K}$ so $m_{\beta, M}$ is separable which implies $L/M$ is separable.
 
     ``$\Leftarrow$'': For any $\alpha \in L$, write $m_{\alpha, M} = x^n + a_{n-1}x^{n-1} + \dots + a_1 x + a_0$,
-    then $m_{\alpha, M}$ is separable implies that $\alpha$ is separable over $K(a_0, \dots, a_{n-1}$.
+    then $m_{\alpha, M}$ is separable implies that $\alpha$ is separable over $K(a_0, \dots, a_{n-1})$.
     By theorem~\ref{thm:separable-elements-form-separable-field},
     $K(a_0, a_1, \dots, a_{n-1}, \alpha) / K$ is separable, hence each $\alpha$ is separable over $K$,
     thus $L/K$ is separable.
