--- a/fields/week2.tex
+++ b/fields/week2.tex
@@ -60,9 +60,10 @@
 \end{theorem}
 
 \begin{theorem}
-  Let $n \in \mathbb{N}$ and $\mathbb{F}_q$ be a finite field. Then exists a unique extension
-  $\Fb_{q^n} / \Fb_q$ satisfied $[\Fb_{q^n} : \Fb_q] = n$, and $\Aut \Big( \Fb_{q^n} / \Fb_q \Big) =
-  \langle \sigma_q \rangle$ with $\sigma_q = \alpha :: \Fb_{q^n} \mapsto \alpha^q :: \Fb_{q^n}$.
+  Let $n \in \mathbb{N}$ and $\mathbb{F}_q$ be a finite field. Then there exists
+  a unique extension $\Fb_{q^n} / \Fb_q$ s.t. $[\Fb_{q^n} : \Fb_q] = n$, and
+  $\Aut \Big( \Fb_{q^n} / \Fb_q \Big) = \langle \sigma_q \rangle$ with
+  $\sigma_q = \alpha :: \Fb_{q^n} \mapsto \alpha^q :: \Fb_{q^n}$.
   $\sigma_q$ is called the \emph{\Index{Frobenius homomorphism}}.
 
   \begin{proof}
