--- a/fields/week3.tex
+++ b/fields/week3.tex
@@ -77,12 +77,12 @@ In below we would use the Zorn's lemma heavily.
     Also, $J$ is proper since $1 \not\in J$, or else $1 \in J_i$ and thus $J_i = R$ which leads to
     an contradiction.
 
-    By Zorn's lemma, exists a maximal element in $S$, and thus it is a maximal ideal which contains $I$.
+    By Zorn's lemma, $\exists$ a maximal element in $S$, and thus it is a maximal ideal which contains $I$.
   \end{proof}
 \end{lemma}
 
 \begin{theorem}
-  If $K$ is a field, then exists an algebraic closure $L$ of $K$.
+  If $K$ is a field, then $\exists$ an algebraic closure $L$ of $K$.
 
   \begin{proof}
     Let $S = \Set{x_f \given f(x) \in K[x] \text{ with } \deg f \geq 1}$ be the set of variables indexed by non-constant
@@ -93,13 +93,14 @@ In below we would use the Zorn's lemma heavily.
     Write $x_i \triangleq x_{f_i}$ for $i = 1, 2, \cdots, n$. Also, by definition $g_i$ only involves a finite number of
     variable in $S$, so we could set $g_i \in K[x_1, x_2, \cdots, x_m]$ with $m \geq n$. That is, $1 = \sum_{i = 1}^n g_i(x_1, x_2,
     \cdots, x_m) f_i(x_i)$. Let $\Sigma$ be a splitting field for $f(x) = f_1(x) f_2(x) \cdots f_n(x)$ and define $\alpha_i \in \Sigma$
-    which satisfied $f_i(\alpha_i) = 0$ and $a_i = 0$ for $n+1 \leq i \leq m$. Then
+    which satisfies $f_i(\alpha_i) = 0$ and $a_i = 0$ for $n+1 \leq i \leq m$. Then
     $1 = \sum_{i = 1}^n g(\alpha_1, \alpha_2, \cdots, \alpha_m) f_i(\alpha_i) = 0$ which leads to an contradiction.
 
-    By lemma~\ref{lemma:max-ideal-exists}, exists a maximal ideal $M$ satisfied $I \subseteq M$.
+    By lemma~\ref{lemma:max-ideal-exists}, $\exists$ a maximal ideal $M$ s.t. $I \subseteq M$.
 
     Consider $K \hookrightarrow F_1 \triangleq K[S] / M$, and then for all $f \in K[x]$, $f(\bar{x}_f) = \bar{0}$ in $F_1$.
-    By induction, exists $F_1 \subseteq F_2 \subseteq F_3 \subseteq \cdots$ which satisfied $f(x) \in F_n[x]$ has a root in $F_{n+1}$
+    By induction, $\exists F_1 \subseteq F_2 \subseteq F_3 \subseteq \cdots$
+    which satisfies $f(x) \in F_n[x]$ has a root in $F_{n+1}$
     Let $F = \bigcup_{i = 1}^\infty F_i$ which is algebraically closed since if $f(x) \in F[x]$ then $f(x) \in F_m[x]$
     for some $m$ and thus $f(x)$ has a root in $F_{m+1} \subseteq F$.
 
@@ -119,7 +120,7 @@ In below we would use the Zorn's lemma heavily.
       Given any chain $\{(M_i, \theta_i) : i \in \Lambda \}$, let $N = \bigcup_{i = 1}^\infty M_i$ and
       $\theta = \alpha :: N \mapsto \theta_i(\alpha)$ if $\alpha \in M_i$. It could
       be check easily that this map is well defined, and $(N, \theta)$ is
-      a least upper bound in $S$ for this chain.  By Zorn's lemma, exists a max element $(M, \sigma)$ in $S$.
+      a least upper bound in $S$ for this chain.  By Zorn's lemma, $\exists$ a max element $(M, \sigma)$ in $S$.
 
       Now, if $M \neq L_1$, then pick $\alpha \in L_1 \setminus M$. Since $L_1/K$ is algebraic,
       the minimal polynomial $m_{\alpha, K}$ exists. Since $L_2$ algebraically closed, $\bar\sigma(m_{\alpha, K})$
@@ -230,19 +231,19 @@ In below we would use the Zorn's lemma heavily.
   Let $[K': K] = d$ and $\tau:: K \to L \neq 0$. Then $\quot{K'}{K}$ is separable and $\forall \alpha \in K'$,
   $\bar\tau(m_{\alpha, K})$ splits over $L$, if and only if there are exactly
   $d$ monomorphisms $\sigma::K' \to L$ with $\sigma\big|_k = \tau$.
-  Otherwise exists $r < d$ of such monomorphisms.
+  Otherwise $\exists r < d$ of such monomorphisms.
 
   \begin{proof}
     By induction on $d$, if $d = 1$ we could simply let $\sigma = \tau$.
 
     Now for $d > 1$, let $\alpha \in K' \setminus K$.
-    By prop $1$, exists exactly $[K(\alpha): K]$ monomorphisms $\tau_1: K(\alpha) \to L$.
+    By prop $1$, $\exists$ exactly $[K(\alpha): K]$ monomorphisms $\tau_1: K(\alpha) \to L$.
 
     Now, for any $\beta \in \quot{K'}{K(\alpha)}$,
     $m_{\beta, K(\alpha)} \mid m_{\beta, K}$ and thus $m_{\beta, K(\alpha)}$ is separable
     and $\bar\tau(m_{\beta, K(\alpha)})$ splits in $L$ since $\bar\tau(m_{\beta, K})$ splits.
     These implies that $\quot{K'}{K(\alpha)}$ is separable and $\forall \beta \in K(\alpha),
-    m_{\beta, K(\alpha)}$ splits in $L$. Thus, $K(\alpha)$ satisfied the hypothesis,
+    m_{\beta, K(\alpha)}$ splits in $L$. Thus, $K(\alpha)$ satisfies the hypothesis,
     and by induction, there are exactly $[K': K(\alpha)]$ monomorphisms $\sigma :: K' \to L$
     such that $\sigma\big|_{K(\alpha)} = \tau_1$, thus there are $[K': K(\alpha)][K(\alpha): k]
     = [K': K]$ such monomorphisms.
