--- a/multilinear/week12.tex
+++ b/multilinear/week12.tex
@@ -128,7 +128,7 @@ Let $M, N$ and $U$ be $R$-module. Then
 
 \begin{definition}
   An exact sequence $A \xrightarrow{f_1} B \xrightarrow{f_2} \cdots$ is
-  a sequence satisfied $\text{im}\; f_k = \ker f_{k+1}$.
+  a sequence satisfying $\text{im}\; f_k = \ker f_{k+1}$.
 \end{definition}
 
 \begin{itemize}
@@ -221,7 +221,7 @@ $T(M)$ containing $M$ that is ``universal'' w.r.t. $R$-algebras containing $M$.
 That is, a tensor algebra is a pair $(T(M), i)$ where $T(M)$ is an $R$-algebra
 and $i :: M \to T(M)$, such that for any $R$-algebra $A$ containing $M$,
 which is to say that exist a $R$-module homomorphism $\varphi: M \to A$,
-then exists an $R$-algebra homomorphism $\psi :: T(M) \to A$ such
+then $\exists$ an $R$-algebra homomorphism $\psi :: T(M) \to A$ such
 that $\varphi = \psi \circ i$. \\[.5em]
 
 \underline{Construction}:
