`over K` doens't make sense, change to `over L`

--- a/hw/week4.tex
+++ b/hw/week4.tex
@@ -35,7 +35,7 @@
     \item Show that if $\chi_1,\dots,\chi_n$ are distinct characters of $G$ with
       values in $L$, then they are linearly independent over $L$.
     \item Show that if $\sigma_1, \dots, \sigma_n$ are distinct monomorphisms
-      from $K$ to $L$, then they are linearly independent over $K$.
+      from $K$ to $L$, then they are linearly independent over $L$.
     \item Show that distinct automorphisms of $K$ are linearly independent over
       $K$.
   \end{enumerate}
