--- a/main.tex
+++ b/main.tex
@@ -342,6 +342,7 @@
 \include{fields/week2}
 \include{fields/week3}
 \include{fields/week4}
+\include{fields/week5}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
