Add some content

--- a/fields/week2.tex
+++ b/fields/week2.tex
@@ -59,7 +59,7 @@
   \end{proof}
 \end{theorem}
 
-\begin{theorem}
+\begin{theorem} \label{thm:aut-of-finite-field}
   Let $n \in \mathbb{N}$ and $\mathbb{F}_q$ be a finite field. Then there exists
   a unique extension $\Fb_{q^n} / \Fb_q$ s.t. $[\Fb_{q^n} : \Fb_q] = n$, and
   $\Aut \Big( \Fb_{q^n} / \Fb_q \Big) = \langle \sigma_q \rangle$ with
