Fix a small bug

--- a/hw/week5.tex
+++ b/hw/week5.tex
@@ -18,7 +18,7 @@
     \item Show that $\left[\Qb\left(\zeta_n + \frac{1}{\zeta_n}\right) : \Qb\right]
       = \frac{\varphi(n)}{2}$.
     \item Find $\Phi_8, \Phi_9$.
-    \item Show that $x^16 + 1$ is irreducible in $\Qb[x]$ and is reducible
+    \item Show that $x^{16} + 1$ is irreducible in $\Qb[x]$ and is reducible
       in $\Fb_7[x]$ as a product of $4$ quartic polynomials.
   \end{enumerate}
 \end{exercise}
